# fastui-demo

./: Dockerfile  LICENSE  README.md  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json  onCreate.sh
.github/: ISSUE_TEMPLATE.md  dependabot.yaml
.github/workflows/: ci.yaml
tests/: test_app.py
