[tool.poetry]
name = "fastui-app"
version = "0.1.0"
description = "FastUI App"
authors = ["John Bull <johnbullnz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastui = "^0.5.2"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.7.0"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
